changing production variable

--- a/SignalApp/.env
+++ b/SignalApp/.env
@@ -8,5 +8,5 @@ DEFAULT_FROM_EMAIL=NONE
 EMAIL_HOST_PASSWORD=NONE
 EMAIL_HOST=NONE
 EMAIL_PORT=587
-SITE_ENVIRONMENT=DEV
+SITE_ENVIRONMENT=PROD
 CONNECTIONS_PASSWORD=NONE
