--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,34 @@ dateparser==0.7.6
 decorator==4.4.2
 distlib==0.3.1
 Django==3.1.2
-django-cors-headers==3.5.0
-djangorestframework==3.12.1
-djangorestframework-simplejwt==4.4.0
+django-bootstrap4
+django-crispy-forms
+django-simple-cookie-consent
+django-background-tasks
+django-easy-pdf
+WeasyPrint>=0.34
+xhtml2pdf
+django-classy-tags
+django-colorfield
+django-compat
+django-cookie-law
+boto3
+django-storages
+django-crontab
+django-cymysql
+django-filter
+django-grappelli
+django-mailjet
+django-randompinfield
+django-rest-auth
+django-rest-framework==0.1
+django-rest-swagger
+django-smtp-ssl
+django-storages
+djangorestframework
+django-cors-headers
+djangorestframework
+djangorestframework-simplejwt
 filelock==3.0.12
 gunicorn==20.0.4
 hyperlink==20.0.1
@@ -83,6 +108,8 @@ websocket-client==0.57.0
 yarl==1.1.0
 zope.interface==5.1.2
 redis
-django-channels
+django_channels
+whitenoise
 django_celery_results
 django_celery_beat
+tradier
