--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,3 @@
-aiodns==1.1.1
-aiohttp==3.6.3
-appdirs==1.4.4
-argcomplete==1.12.1
-asgiref==3.2.10
-async-timeout==3.0.1
-attrs==20.2.0
-autobahn==20.7.1
-Automat==20.2.0
-backcall==0.2.0
-beautifulsoup4==4.9.3
-certifi==2020.6.20
-cffi==1.14.3
-cfgv==3.2.0
-chardet==3.0.4
-colorlog==4.6.2
-constantly==15.1.0
-cryptography==3.1.1
 celery
 dateparser==0.7.6
 decorator==4.4.2
@@ -51,10 +33,6 @@ djangorestframework
 djangorestframework-simplejwt
 filelock==3.0.12
 gunicorn==20.0.4
-hyperlink==20.0.1
-identify==1.5.11
-idna==2.10
-incremental==17.5.0
 ipython==7.19.0
 ipython-genutils==0.2.0
 jedi==0.17.2
@@ -67,42 +45,9 @@ nox==2020.8.22
 numpy==1.19.4
 pandas==1.1.4
 plotly
-parso==0.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pre-commit==2.9.3
-prompt-toolkit==3.0.8
-protobuf==3.14.0
-psutil==5.7.2
+psycopg
 psycopg2-binary==2.8.6
-ptyprocess==0.6.0
-pushbullet.py==0.11.0
-py==1.9.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycares==3.1.1
-pycparser==2.20
-Pygments==2.7.2
-PyHamcrest==2.0.2
-PyJWT==1.7.1
-pyOpenSSL==19.1.0
-python-dateutil==2.8.1
-python-magic==0.4.18
-pytz==2020.1
-PyYAML==5.3.1
-regex==2020.10.15
 requests==2.24.0
-service-identity==18.1.0
-six==1.15.0
-soupsieve==2.0.1
-sqlparse==0.4.1
-toml==0.10.2
-traitlets==5.0.5
-Twisted==20.3.0
-txaio==20.4.1
-tzlocal==2.1
-urllib3==1.25.10
-virtualenv==20.1.0
 wcwidth==0.2.5
 websocket-client==0.57.0
 yarl==1.1.0
