adding the final touches for the command options, now you should be able to add the csvfiles and save all of the data with the operations done in the DB

--- a/SignalApp/.env
+++ b/SignalApp/.env
@@ -8,5 +8,5 @@ DEFAULT_FROM_EMAIL=NONE
 EMAIL_HOST_PASSWORD=NONE
 EMAIL_HOST=NONE
 EMAIL_PORT=587
-SITE_ENVIRONMENT=PROD
+SITE_ENVIRONMENT=DEV
 CONNECTIONS_PASSWORD=NONE
