adding new changes based on new API which helps to manage the data and brings the data better

--- a/SignalApp/.gitignore
+++ b/SignalApp/.gitignore
@@ -1,3 +1,16 @@
+# Folders
+venv
+# migrations
+__pycache__
+logs
 
-#Databases
-.sqlite3
+# DB
+*.sqlite3
+*.log
+
+# Editors.
+.idea
+.vscode
+
+
+
