adding configuration files and final touches to deploy server

--- a/SignalApp/.env
+++ b/SignalApp/.env
@@ -1,12 +1,12 @@
-DATABASE_HOST=NONE
+DATABASE_HOST=signalappdb.civagoijqymk.us-east-2.rds.amazonaws.com
 DATABASE_PORT=5432
-DATABASE_USER=NONE
-DATABASE_PASSWORD=NONE
-DATABASE_NAME=NONE
+DATABASE_USER=signal_prod
+DATABASE_PASSWORD=Signal_App2021%
+DATABASE_NAME=signal_app_db
 EMAIL_HOST_USER=NONE
 DEFAULT_FROM_EMAIL=NONE
 EMAIL_HOST_PASSWORD=NONE
 EMAIL_HOST=NONE
 EMAIL_PORT=587
-SITE_ENVIRONMENT=PROD
+SITE_ENVIRONMENT=DEV
 CONNECTIONS_PASSWORD=NONE
