--- a/SignalApp/mysite_nginx.conf
+++ b/SignalApp/mysite_nginx.conf
@@ -2,13 +2,13 @@
 
 # the upstream component nginx needs to connect to
 upstream django {
-    server unix:///home/ubuntu/signals_app/SignalsApp/mysite.sock;
+    server unix:///home/ubuntu/signal_app/SignalsApp/mysite.sock;
 }
 
 # configuration of the server
 server {
     # the domain name it will serve for
-    # server_name signalapp.com;
+    server_name 0.0.0.0;
 
     # the port your site will be served on
     listen      80;
@@ -20,17 +20,17 @@ server {
 
     # Django media
     location /media  {
-        alias /home/ubuntu/signals_app/SignalsApp/media;  
+        alias /home/ubuntu/signal_app/SignalsApp/media;  
     }
 
     location /static {
-        alias /home/ubuntu/signals_app/SignalsApp/static; 
+        alias /home/ubuntu/signal_app/SignalsApp/static; 
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
         uwsgi_pass  django;
-        include    /home/ubuntu/signals_app/SignalsApp/uwsgi_params; 
+        include    /home/ubuntu/signal_app/SignalsApp/uwsgi_params; 
 
        proxy_connect_timeout   30000;
        proxy_send_timeout      30000;
